Bug #46574
Cephfs with kernel client mtime stuck when multiple clients append to file
0%
Description
File modification timestamp stop updating when multiple clients(from multiple nodes) append to file at same time or few seconds after each other.
For example:
node1 => echo "test1" >> /mnt/ceph/mtime_test
node2 => echo "test2" >> /mnt/ceph/mtime_test
node1 => echo ....
node2 => echo ....
node1 => watch stat /mnt/ceph/mtime_test # first 1-2 change and no change even after few minutes of waiting
Timestam start working again, when no client appending to file for 20-120s
Sometimes mtime not updating even when only one client appending to file, but its rare.
OS: Ubuntu 18.04.4, Ubuntu 20.04, fedora 32
Kernel: 5.4.0-40-generic, 4.15.0-108-generic,4.15.0-109-generic or even latest 5.7.7/5.7.8
Ceph v15.2.3, v15.2.4, 14.2.10
No problem except bad performance with ceph-fuse client.
History
#1 Updated by Jozef Kováč 6 months ago
Sometimes stuck for longer than 2 mins even 30 minutes after last append to file new append to file do not updating timestamp no mather how long waiting